ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  namespace: memos-app
spec:
  ingressClassName: traefik
  rules:
  - host: sharifi.osdl.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memos
            port:
              number: 5230
